*queuemetrics-19.10.5 (19 Dec 2019)

  19 Dec 2019; Agostino Sarubbo <ago@gentoo.org> +queuemetrics-19.10.5.ebuild,
  -queuemetrics-19.10.4.ebuild:
  app-metrics/queuemetrics: version bump to 19.10.5 - remove old

*queuemetrics-19.10.4 (20 Nov 2019)

  20 Nov 2019; Agostino Sarubbo <ago@gentoo.org> +queuemetrics-19.10.4.ebuild,
  -queuemetrics-19.10.3.ebuild:
  app-metrics/queuemetrics: version bump to 19.10.4 - remove old.

  12 Nov 2019; Agostino Sarubbo <ago@gentoo.org>
  -queuemetrics-19.04.3-r1.ebuild, -queuemetrics-19.04.3-r2.ebuild,
  -queuemetrics-19.10.1.ebuild, -queuemetrics-19.10.2.ebuild,
  queuemetrics-19.10.3.ebuild:
  app-metrics/queuemetrics: remove old

*queuemetrics-19.10.3 (12 Nov 2019)

  12 Nov 2019; Agostino Sarubbo <ago@gentoo.org> +queuemetrics-19.10.3.ebuild:
  app-metrics/queuemetrics: version bump to 19.10.3

*queuemetrics-19.10.2 (24 Oct 2019)

  24 Oct 2019; Agostino Sarubbo <ago@gentoo.org> +queuemetrics-19.10.2.ebuild:
  app-metrics/queuemetrics: version bump to 19.10.2

*queuemetrics-19.10.1 (21 Oct 2019)

  21 Oct 2019; Agostino Sarubbo <ago@gentoo.org> +queuemetrics-19.10.1.ebuild:
  app-metrics/queuemetrics: version bump to 19.10.1

*queuemetrics-19.04.3-r2 (19 Jul 2019)

  19 Jul 2019; Agostino Sarubbo <ago@gentoo.org> +files/queuemetrics.service,
  +files/queuemetrics.service.conf, +files/queuemetrics.socket,
  +queuemetrics-19.04.3-r2.ebuild, files/queuemetrics.initd:
  app-metrics/queuemetrics: support systemd, tomcat bump

  11 Jul 2019; Agostino Sarubbo <ago@gentoo.org> -queuemetrics-19.04.1.ebuild,
  -queuemetrics-19.04.3.ebuild, queuemetrics-19.04.3-r1.ebuild:
  app-metrics/queuemetrics: use https mirror, remove old

*queuemetrics-19.04.3-r1 (03 Jul 2019)

  03 Jul 2019; Agostino Sarubbo <ago@gentoo.org> +files/server.xml,
  +queuemetrics-19.04.3-r1.ebuild, files/25queuemetrics:
  app-metrics/queuemetrics: install a custom server.xml, protect server.xml via