@@ -6,7 +6,9 @@ AUX queuemetrics.service.conf 1149 SHA256 c5e7f5a7347967eaba34af182d1e80873f4000
 AUX queuemetrics.socket 126 SHA256 a04679c03f2cd417cd03e6e6d233cdc749a4adc86cb04ad992c586ec52519496 SHA512 7c2040504c36b49970895bfaf4874977275a3e51aad36f065efbd3a956832f486f07b98d6ab2c521a77a3f67e8b494cf5600e4b7025e733d9304b1b614315dcc WHIRLPOOL af2836262d5e0e3b62929f7a46a054bdccf1e4299b0a95b934d10e45185cdf7536481fd6c41dc6fd244c027405db12a32cea1a8b9f6d1df94546492ff741c354
 AUX server.xml 1628 SHA256 6efaee54a0a4246a82e835ff94ec37906f0846b517bf066d0b728ce74d08298a SHA512 6e5134dbb9e616c01dd2f827002bd947875234d19bce8c320e0f279d56f46062ce77f0ade56cd29e87cfbba85fb02d1c0983c5e21b8621b1544d383bd53df1cc WHIRLPOOL 0ac36562cf9cd2b7f55f2293fbfed6a3f89f24c5572ae36ca59769ea90e4cdf2ac374dd9d7c8f71aeb7dbfe734c762fdf1bc1bcd580186763ae3adeb8fb66fe3
 DIST QueueMetrics-19.10.5.tar.gz 16167427 SHA256 e6d37eacad25302d09db1cde9b60c6ace18254096fed60dc23fda7108548709e SHA512 76bc3641211a609cdb3944002e2658fa61f0e0d45239130bc2dc483271ce10606aa4cf73bf9905a88c170bc71e60524c4879f7d7d53cd02851b4d9f4eeb464e6 WHIRLPOOL 4024acf2d6c1a875672e44c1b9b3f9c5c37844dbc5cb34248bddf9e998923741e3243d87a0d1afc783f2315d08785919faebf46e79d87441ae3c0974118ae7ed
+DIST QueueMetrics-19.10.6.tar.gz 16167449 SHA256 b4a9b58086447c53bb728974dc29079957b46e1d82e07b8e365052d00eb947e9 SHA512 b6e39053e2d9369e92d6efdf5e636d35b25b32939a5fafeebc9aad00d478ba64b033cd56d4a11d25875a454134b45d9dd91464d6e93b9e67472f648b7b1dac40 WHIRLPOOL 7b1f35e4d8d9aa4c73301673ccec7070eb8ca20729daf3e2cd63d0d82ccc40eb96e5465cdba97a868661f0ef27a2d494b737170a0c401dac89a6190b99ecee4c
 DIST apache-tomcat-8.5.50.tar.gz 10305939 SHA256 ea762293e889f85d40f5ec14ac4474e133a379522d623f4ba5993da6260bf06e SHA512 ffca86027d298ba107c7d01c779318c05b61ba48767cc5967ee6ce5a88271bb6ec8eed60708d45453f30eeedddcaedd1a369d6df1b49eea2cd14fa40832cfb90 WHIRLPOOL 9c7874dcbfac53e6b9ccacee8bcb907c845888079d90147985238a2aa73e2f149d6eacbefc192e97864e81705c4117fc52b017954063db9d356565d1f0017d77
 EBUILD queuemetrics-19.10.5.ebuild 1983 SHA256 6088b69f3d969215c37775e6bce9aac52fa6db4e908a809f333ea11fff4f22a6 SHA512 045d4295c316c48cc2024bef6291024163862245464c872814b591fe68a3c0a28f8a9fc9cee6b0c4365252c523dd70263844aeed94c32837b33d69db831f85f3 WHIRLPOOL 9ba7e2879329e2a592e58c54eedf6245630f4269cd60a781929676e92754fb48117ff9d190deb945bb513e083d4fc54bdf3bbcfaab17d1c47eca6413e7055e95
-MISC ChangeLog 3317 SHA256 75cf0e3bbac526e35a3ed9e89d98574cb6487ab8b653de4df995f89d4db7521f SHA512 6f2a230c5c4314e08dfae9e46e0b00667ee4dc487163995a576944bd8ddeeed8af500c9135d09832490924a31575aceee06f70465ae5fdbcd16b8ddb8feeebfb WHIRLPOOL ff663de6fd7157326a190e1227eda77d5691b2c65ad9a4a576c53930b5cd25491dcb1a1331968577c690b0f392e74b0d3657ed07eeefddb431fa635529d22cee
+EBUILD queuemetrics-19.10.6.ebuild 1983 SHA256 a49ef530748165d176808647aab94abab0bf4016fe673923ae9795c2db978881 SHA512 2ff5123b186040e071723c77d7db6c65a3be27aa351b7e0c4f55cd68af623d46792a84a3d391e370b89e246809571a988cfe5d02599f473062963a2ce9291ddc WHIRLPOOL 2d618346c2f6943530eb1dfbf29d6022a00a5f2e89ba96730df76a1470fb5043495c51ea917958c2262253f46d8f46af17d28114a1cbe3f528cc04eadaa16326
+MISC ChangeLog 3486 SHA256 188fa887ae17139c9f498c87be2cc83a77249add9ef036466845d5297cec2a3e SHA512 cb2398643961130bf9bdedd26fdf98ddca3c67c84e015411742f19ed1aa8b60b163fef7763747fb6fd1c6e73f85b9365bd5d4005e560a4fea39048b2cb162486 WHIRLPOOL 3f6752e617dc493be374d46335706c0814fe672c0e39bffe680eba4cb288203a9eccab25efd43e35049b8d9e0ea61040c1eccf0e9e6d51b9e52550ebb902762b
 MISC metadata.xml 389 SHA256 3d4f1ca7609f74c3bddef49ce0d31edb1b23cd221ee6abe001abecaac65ec87e SHA512 52df615f053daaa05ae886a8c32149d4b714e7cb8e03804fc39b16160dd3f1381645c9d5a15ce113e875234fbecbf005879dd57bbb418eddfcc901354da498f2 WHIRLPOOL 506f357243b5b1bb8e427132b19b86865932dba8344c895debb1074fa301f308850ced982a2eb29c5becebfa788b5ed7465fd285e2bf53bae95a8d680fe8cc20
