@@ -1,3 +1,8 @@
+*queuemetrics-19.10.6 (16 Jan 2020)
+
+  16 Jan 2020; Agostino Sarubbo <ago@gentoo.org> +queuemetrics-19.10.6.ebuild:
+  app-metrics/queuemetrics: version bump to 19.10.6
+
 *queuemetrics-19.10.5 (19 Dec 2019)
 
   19 Dec 2019; Agostino Sarubbo <ago@gentoo.org> +queuemetrics-19.10.5.ebuild,
